Fixed weird spacing on single view

--- a/app/assets/stylesheets/less/single.less
+++ b/app/assets/stylesheets/less/single.less
@@ -1,9 +1,9 @@
 body.single, body.profile {
 	#read-ballot .row {
 		hr.button.lower { display:none; }
-		.explanation { margin-bottom: 42px; }
-		.candidate .voted { margin-bottom:40px;}
-		.measure .voted,
+		.explanation { margin-bottom: 0px; }
+		.voted { margin:10px 0 50px;}
+		.measure,
 		button.open { display: none }
 		.body { 
 			display: block;
